--- a/MovieApplication/Base.lproj/Main.storyboard
+++ b/MovieApplication/Base.lproj/Main.storyboard
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="LoginViewController" customModule="MovieApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Yf-jR-JXC">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="THE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PbQ-uA-GIj">
+                                <rect key="frame" x="157.66666666666666" y="184" width="77.666666666666657" height="52"/>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MOVIE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdi-pw-JuK">
+                                <rect key="frame" x="123.66666666666667" y="236" width="145.66666666666663" height="52"/>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2wu-HA-O5r">
+                                <rect key="frame" x="75" y="588" width="243" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Etn-N9-tzy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ffL-xZ-5vP">
+                                <rect key="frame" x="75" y="638" width="243" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="0p2-sd-xBo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gof-J1-lgZ">
+                                <rect key="frame" x="100" y="718" width="193" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="HzR-xo-6kO"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Sign in" cornerStyle="dynamic">
+                                    <backgroundConfiguration key="background"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EHp-Lf-L66"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ffL-xZ-5vP" secondAttribute="trailing" constant="75" id="1NM-dy-9lt"/>
+                            <constraint firstItem="ffL-xZ-5vP" firstAttribute="top" secondItem="2wu-HA-O5r" secondAttribute="bottom" constant="10" id="484-gi-8PR"/>
+                            <constraint firstItem="1Yf-jR-JXC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6pw-Zr-Pa0"/>
+                            <constraint firstItem="gof-J1-lgZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="86R-y5-OtF"/>
+                            <constraint firstItem="ffL-xZ-5vP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9GJ-wc-9Ev"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1Yf-jR-JXC" secondAttribute="trailing" id="A5p-j1-qTG"/>
+                            <constraint firstItem="2wu-HA-O5r" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Liq-PW-o6q"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gof-J1-lgZ" secondAttribute="trailing" constant="100" id="TCJ-Lu-1e0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1Yf-jR-JXC" secondAttribute="bottom" id="WMz-Oa-S9f"/>
+                            <constraint firstItem="mdi-pw-JuK" firstAttribute="top" secondItem="PbQ-uA-GIj" secondAttribute="bottom" id="fWZ-kE-TF1"/>
+                            <constraint firstItem="2wu-HA-O5r" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="hMB-pw-4SM"/>
+                            <constraint firstItem="PbQ-uA-GIj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iIG-y6-Ryv"/>
+                            <constraint firstItem="mdi-pw-JuK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="keV-1b-Tqb"/>
+                            <constraint firstItem="PbQ-uA-GIj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="125" id="p0L-2n-B1o"/>
+                            <constraint firstItem="ffL-xZ-5vP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="qCD-Nl-zt9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2wu-HA-O5r" secondAttribute="trailing" constant="75" id="rig-JO-FIK"/>
+                            <constraint firstItem="1Yf-jR-JXC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rqQ-eq-8tF"/>
+                            <constraint firstItem="2wu-HA-O5r" firstAttribute="top" secondItem="mdi-pw-JuK" secondAttribute="bottom" constant="300" id="uqF-dO-GVl"/>
+                            <constraint firstItem="gof-J1-lgZ" firstAttribute="top" secondItem="ffL-xZ-5vP" secondAttribute="bottom" constant="40" id="zuG-Lr-gcH"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="1Yf-jR-JXC" id="XdL-9r-Fcs"/>
+                        <outlet property="movieTextLabel" destination="mdi-pw-JuK" id="csW-3K-loW"/>
+                        <outlet property="passwordTextField" destination="ffL-xZ-5vP" id="jLz-s6-9VG"/>
+                        <outlet property="usernameTextField" destination="2wu-HA-O5r" id="k6R-Jx-W2E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="138" y="4"/>
         </scene>
     </scenes>
+    <color key="tintColor" systemColor="systemPinkColor"/>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
