--- a/MovieApplication/Base.lproj/Main.storyboard
+++ b/MovieApplication/Base.lproj/Main.storyboard
@@ -172,7 +172,7 @@
                                                                     <rect key="frame" x="0.0" y="35" width="393" height="20"/>
                                                                     <subviews>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AGc-gi-LGJ">
-                                                                            <rect key="frame" x="10" y="0.0" width="100" height="20"/>
+                                                                            <rect key="frame" x="10" y="0.0" width="101.33333333333333" height="20"/>
                                                                             <subviews>
                                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="star.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="7fV-Uh-26L">
                                                                                     <rect key="frame" x="0.0" y="0.66666666666666607" width="20" height="18.666666666666671"/>
@@ -182,11 +182,11 @@
                                                                                     </constraints>
                                                                                 </imageView>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="vote_average" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8JD-v5-W5q">
-                                                                                    <rect key="frame" x="25" y="0.0" width="75" height="20"/>
+                                                                                    <rect key="frame" x="25" y="0.0" width="76.333333333333329" height="20"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="height" constant="20" id="wnY-2A-F1z"/>
                                                                                     </constraints>
-                                                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
@@ -196,7 +196,6 @@
                                                                                 <constraint firstItem="8JD-v5-W5q" firstAttribute="top" secondItem="AGc-gi-LGJ" secondAttribute="top" id="6bL-Hx-fzV"/>
                                                                                 <constraint firstItem="8JD-v5-W5q" firstAttribute="leading" secondItem="7fV-Uh-26L" secondAttribute="trailing" constant="5" id="Bwa-Op-H6M"/>
                                                                                 <constraint firstAttribute="trailing" secondItem="8JD-v5-W5q" secondAttribute="trailing" id="Wo4-d6-fAu"/>
-                                                                                <constraint firstAttribute="width" constant="100" id="Xns-cQ-5Xf"/>
                                                                                 <constraint firstItem="7fV-Uh-26L" firstAttribute="top" secondItem="AGc-gi-LGJ" secondAttribute="top" id="Ytn-HW-E9b"/>
                                                                                 <constraint firstAttribute="bottom" secondItem="8JD-v5-W5q" secondAttribute="bottom" id="eNf-j6-54m"/>
                                                                                 <constraint firstItem="7fV-Uh-26L" firstAttribute="leading" secondItem="AGc-gi-LGJ" secondAttribute="leading" id="fpG-h6-Er6"/>
@@ -204,7 +203,7 @@
                                                                             </constraints>
                                                                         </view>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t5N-zM-N8S">
-                                                                            <rect key="frame" x="115" y="0.0" width="100" height="20"/>
+                                                                            <rect key="frame" x="116.33333333333334" y="0.0" width="88.333333333333343" height="20"/>
                                                                             <subviews>
                                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ttT-DK-Kuy">
                                                                                     <rect key="frame" x="0.0" y="0.66666666666666607" width="20" height="18.666666666666671"/>
@@ -214,11 +213,11 @@
                                                                                     </constraints>
                                                                                 </imageView>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="vote_count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lg8-cn-c7A">
-                                                                                    <rect key="frame" x="25" y="0.0" width="75" height="20"/>
+                                                                                    <rect key="frame" x="25.000000000000018" y="0.0" width="63.333333333333343" height="20"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="height" constant="20" id="09Z-N6-Gq9"/>
                                                                                     </constraints>
-                                                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
@@ -228,7 +227,6 @@
                                                                                 <constraint firstItem="lg8-cn-c7A" firstAttribute="top" secondItem="t5N-zM-N8S" secondAttribute="top" id="6HW-py-guq"/>
                                                                                 <constraint firstItem="ttT-DK-Kuy" firstAttribute="leading" secondItem="t5N-zM-N8S" secondAttribute="leading" id="6sv-Ly-zc0"/>
                                                                                 <constraint firstAttribute="trailing" secondItem="lg8-cn-c7A" secondAttribute="trailing" id="EWj-3E-u3z"/>
-                                                                                <constraint firstAttribute="width" constant="100" id="ODf-m2-0xm"/>
                                                                                 <constraint firstAttribute="height" constant="20" id="TD2-fY-J0P"/>
                                                                                 <constraint firstAttribute="bottom" secondItem="lg8-cn-c7A" secondAttribute="bottom" id="Yvs-TF-wYf"/>
                                                                                 <constraint firstItem="ttT-DK-Kuy" firstAttribute="top" secondItem="t5N-zM-N8S" secondAttribute="top" id="mqr-aZ-h1v"/>
@@ -251,8 +249,8 @@
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="height" constant="20" id="5Xb-wG-9MS"/>
                                                                                     </constraints>
-                                                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                                                                    <color key="textColor" systemColor="opaqueSeparatorColor"/>
+                                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                                    <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                             </subviews>
@@ -285,7 +283,10 @@
                                                                 </view>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zi1-ky-0kU">
                                                                     <rect key="frame" x="10" y="55" width="373" height="45"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="373" id="ezL-sT-zNk"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -369,6 +370,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" systemColor="systemPinkColor"/>
+                        <color key="selectedImageTintColor" systemColor="systemPinkColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="6fY-UK-isz" kind="relationship" relationship="viewControllers" id="FSU-fN-amc"/>
@@ -404,9 +407,6 @@
         <image name="calendar.circle" catalog="system" width="128" height="123"/>
         <image name="person.circle" catalog="system" width="128" height="123"/>
         <image name="star.circle" catalog="system" width="128" height="123"/>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
